@@ -1,3 +1,7 @@
+2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* strings.h: New file, from today's glibc CVS HEAD.
+
 2008-06-11  Neal H. Walfield  <neal@gnu.org>
 
 	* s-printf.h: New file.
